# Traveler

./: BNO085.py  ControlScript.py  DProbeVariableVelocity.py  Drop.py  GainTuning.py  Gain_Tuning.py  Hopping.py  PD_Control_Test.py  README.md  Scale.py  StagedProbe.py  VelocityProbe.py  motor_velocity_log.csv  oscilateLinks.py
Data/DPROBE/: DPROBE[0704_2336]0.10.csv  DPROBE[0704_2345]1.00.csv  DPROBE[0704_2353]10.00.csv  DPROBE[0704_2355]10.00.csv  DPROBE[0804_0001]100.00.csv  DPROBE[0804_1118]2.00.csv  DPROBE[0804_1137]2.00.csv  DPROBE[0804_1207]2.00.csv  DPROBE[0804_1214]2.00.csv  DPROBE[0804_1219]3.00.csv  DPROBE[0804_1222]4.00.csv  DPROBE[0804_1228]5.00.csv  DPROBE[0804_1230]6.00.csv  DPROBE[0804_1233]7.00.csv  DPROBE[0804_1239]8.00.csv  DPROBE[0804_1243]9.00.csv  DPROBE[0804_1246]10.00.csv  DPROBE[0804_1249]0.50.csv  DPROBE[22.12_04.02]_rrho_0.50.csv  DPROBE[22.15_04.02]_rrho_0.50.csv  DPROBE[2][22.13_04.02]_rrho_0.50.csv  DPROBE[rrho0p1][2015_0403].csv  DPROBE[rrho1][2020_0403].csv  DPROBEtest[1136_0403]_rrho_12.00.csv  SPROBE[0804_0029]0.01.csv  SPROBE[0804_0033]10.00.csv  SPROBE[rrho0p1][2029_0403].csv  SPROBE[rrho1][2034_0403].csv  TEST[C++][21.36_03.13]_rrho_0.50.csv  test[0804_1059]0.10.csv  test[0804_1416]1.00.csv
cpp-staged-velocity-probe/: CMakeLists.txt  README.md
cpp-staged-velocity-probe/src/: CMakeCache.txt  GPIOInterface.cpp  Makefile  PDController.cpp  PDController.h  StagedProbe.cpp  StagedProbe.h  VelocityProbe  cmake_install.cmake  main.cpp  utils.cpp
cpp-velocity-probe/: CMakeLists.txt  README.md
templates/: index.html
(+14 files in other folders)
